2008-11-02 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b7

 * UPDATE: YUI! 0.11.4 -> 2.6.0

 * Change: Renamed printChildren() to getYUIHtmlTree()
           Returns now a string
           Moved into lib/album.php

 Fix: Links to reorder/move album for subalbums for broken.

 Change: jsHTML() now does not repeat JS thats already used. (static cache)

2008-11-02 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b6

 * Change: CSS updates in danmaher skin.

 * Fix: Header in popups/edit_appearance.php

2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b5

 * Fix: Little layout in search results.

 * Fix: Use <br> linebreaks in RSS for titles captions etc.
        Same like in "normal" view.

 * Fix: Use of gTranslate in donation block template.

 * Change: Tweaked Matrix startpage template.

2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b4

 * Delete: Unused and now outdated template/skin files from Jade.

2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b3

 * New: Skin 'danmaher'

2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b2

 * CHANGE: Add a new <div> "headerbox" in every .header file.
           Ths makes it easier to block a header, but you now must set
           a header box end!

 * CHANGE: Languageselector!

 * Change: Minor code cleanups.

2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b1

 * Change: Some icon changed.

 * Fix: Translation domain in platform functions,
         lib/stats, lib/groups


 * Update: Walter Zorns tooltip JS.

 * Fix: Voting in thumbsview broken.
   Thanks to adegutis from forums.

2008-09-16 Chris Kelly <ckdake@ckdake.com> 1.6-RC2

 * Release: 1.6-RC2

2008-09-16 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b25

 * SECURITY FIX: Arbitrary file disclosure

   A user having permissions to add photos to Gallery can retrieve arbitrary
   file (accessible to webserver) from the file system.
   The problem is caused by incorrect treatment of zipped symlinks.

   The Gallery team wants to thank Alex Ustinov for gently reporting this.

