@@ -1,2 +1,7 @@
-
+<?php
+/**
+ * Gallery SVN ID:
+ * $Id: multiInput.js.php 13850 2006-06-19 12:37:37Z jenst $
+*/
+?>
   </div><!-- end headerbox -->
