@@ -1,3 +1,13 @@
+2008-11-02 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b8
+
+ * Change: "Missing" languages in setup are now just an information.
+
+ * Fix: Remove dependency on ctype_digit()
+
+ * Fix: wording
+
+ * Fix: SVN IDs
+
 2008-11-02 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b7
 
  * UPDATE: YUI! 0.11.4 -> 2.6.0
